# astroimsum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cfg  config.sex  default.param  example.py  example_astroimsum.py  example_astrometrynet.py  fits_open.py  list.cat  setup_venv.sh
.github/workflows/: cmake-multi-platform.yml
astroimsum/: CMakeLists.txt  main.cpp
astroimsumlib/: CMakeLists.txt  astrometric_reduction.cpp  delaney.cpp  fits.cpp  frame_frocessing.cpp  frame_io.cpp  source_extractor.cpp  sumation.cpp  summation.cpp
astroimsumlib/include/: astrometric_reduction.hpp  config.hpp  delaney.hpp  fits.hpp  frame.hpp  frame_io.hpp  frame_processing.hpp  linalg.hpp  match.hpp  path_find.hpp  source_extractor.hpp  sumation.hpp  summation.hpp  threadpool.hpp  types.hpp  variant_utils.hpp
astroimsumlib_c/: CMakeLists.txt  astroimsumlib.cpp
astroimsumlib_c/include/: astroimsumlib.h
c/: CMakeLists.txt  astroimsumlib.c  astroimsumlib.cpp  astroimsumlib.h
c/include/: astroimsumlib.h
pyastroimsumlib/: .gitignore  LICENSE  __init__.py  astroimsum.py
python/: astroimsum_test.py  astroimsum_test.sh  astroimsumlib.py
python/astroimsum/: astroimsum.py  astroimsumlib.py
scripts/: config-test-embeded-2015-HB10.cfg  config-test-embeded-Neptune.cfg  config-test-embeded.cfg  config-test-external-2015-HB10.cfg  config-test-external-Neptune.cfg  config-test-external.cfg  run_basic_test.sh  run_tests.sh
scripts/sextractor-2015-HB10/: config.sex
scripts/sextractor-neptune/: config.sex
src/: astrometric_reduction.cpp  astrometric_reduction.hpp  fits.cpp  fits.hpp  frame.hpp  frame_io.cpp  frame_io.hpp  linalg.hpp  main.cpp  source_extractor.cpp  source_extractor.hpp  sumation.cpp  sumation.hpp  threadpool.hpp  types.hpp
tests/: CMakeLists.txt  delaney_test.cpp  reduction_test.cpp  source_extractor_test.cpp
